# kalid

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
.agents/skills/rust-verify-harden/: SKILL.md
benches/: bench.rs
examples/: async.rs  basic.rs  error-handling.rs  from-epoch.rs  prefix.rs  sorting.rs  uuid-interop.rs
src/: lib.rs
tests/: async.rs  basics.rs  builder.rs  collision.rs  edge.rs  k_sortable.rs  parse.rs  properties.rs  unit.rs  uuid_interop.rs
